FIX: Remove extra margin from rows inner block

--- a/assets/reactjs/src/blocks/row/style.scss
+++ b/assets/reactjs/src/blocks/row/style.scss
@@ -155,5 +155,10 @@ div[data-type="qubely/row"] {
 				}
 			}
 		}
+
+		.wp-block {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 	}
 }
